# SPRING

./: .clang-format  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  win-paired
.claude/: settings.local.json
.github/workflows/: ci.yml  comparison.yml  release.yml  sanitizers.yml
LICENSES/: README.md
benchmark/: run_big_benchmark.ps1  run_big_benchmark.sh  run_comparison_benchmark.ps1  run_comparison_benchmark.sh  run_lossless_benchmark.ps1  run_lossless_benchmark.sh
cmake/: embed_reference.py
data/reference/: ref_hg38_gencode49.fa.fai
dev/: common.ps1  common.sh  cppcheck.ps1  cppcheck.sh  lint.ps1  lint.sh  test_get_cpp_sources.ps1  valgrind-smoke.sh  valgrind.supp
dev/docker/linux/: docker-compose.yml
dev/docker/macos/: docker-compose.yml
dev/docker/windows/: docker-compose.yml
dev/include/: omp.h
docs/: ASSAY_REFERENCE.md  BUILDING.md  DEVELOPMENT.md  USAGE.md  index.md  mkdocs.yml
docs/assays/: ASSAY_REFERENCE.md
docs/dev/: DEVELOPMENT.md
docs/user/: ARCHIVE_INSPECTION.md  ASSAYS_AND_QUALITY.md  BUILDING.md  BUILDING_PLATFORMS.md  CLI_REFERENCE.md  COMPRESSION.md  DECOMPRESSION.md  EXAMPLES.md  README.md  USAGE.md
experimental/analysis/: illumina_quality_binning.cpp  noise_entropy.py  pack_quality_values.cpp  quality_run_length_encode.cpp  quality_value_counts.cpp  transpose_quality_matrix.cpp  unpack_quality_values.cpp
experimental/preprocessing/: split_long_reads.cpp
manual_thread_test/: debug_t4.sp  output_t1.fastq  output_t4.fastq  output_t8.fastq  test_t1.sp  test_t4.sp  test_t8.sp
manual_thread_test_after/: test_t4.sp  test_t8.sp
reference/: ref_hg38_gencode49.metadata
scripts/analysis/: RLE.cpp  compute_entropy.py  illumina_quality_binning.cpp  noise_entropy.py  pack_quality_values.cpp  per_position_noise_entropy.py  quality_counts.cpp  quality_entropy.py  quality_illumina_bin.cpp  quality_pack.cpp  quality_run_length_encode.cpp  quality_transpose.cpp  quality_unpack.cpp  quality_value_counts.cpp  read_length_distribution.cpp  readlendistr.cpp  transpose_quality_matrix.cpp  unpack_quality_values.cpp
scripts/common/: common.ps1  common.sh
scripts/docker/linux/: Dockerfile  docker-compose.yml
scripts/docker/macos/: Dockerfile  docker-compose.yml
scripts/docker/windows/: Dockerfile  docker-compose.yml
scripts/lint/: cppcheck.ps1  cppcheck.sh  lint.ps1  lint.sh
scripts/lint/include/: omp.h
scripts/preprocessing/: split_long_reads.cpp  splitlongreads.cpp
scripts/smoke/: valgrind-smoke.sh  valgrind.supp
src/: BooPHF.h  assay_detector.cpp  assay_detector.h  barcode_sort.cpp  barcode_sort.h  bgzf.cpp  bgzf.h  bitset_dictionary.cpp  bitset_dictionary.h  bitset_util.cpp  bitset_util.h  bundle_manifest.h  call_template_functions.cpp  call_template_functions.h  core_utils.h  decompress.cpp  decompress.h  dna_utils.cpp  dna_utils.h  encoder.cpp  encoder.h  encoder_impl.h  fs_utils.cpp  fs_utils.h  integrity_utils.h  io_utils.cpp  io_utils.h  main.cpp  paired_end_order.cpp  paired_end_order.h  params.cpp  params.h  parse_utils.cpp  parse_utils.h  pch.h  pe_encode.cpp  pe_encode.h  preprocess.cpp  preprocess.h  preview.h  (+26 more)
src/assays/: assay_atac.cpp  assay_atac.h  assay_bisulfite.cpp  assay_bisulfite.h  assay_detector.cpp  assay_detector.h  assay_rna.cpp  assay_rna.h  assay_sc_atac.cpp  assay_sc_atac.h  assay_sc_bisulfite.cpp  assay_sc_bisulfite.h  assay_sc_rna.cpp  assay_sc_rna.h
src/common/: bgzf.h  bitset_dictionary.cpp  bitset_dictionary.h  bundle_manifest.h  dna_utils.h  fs_utils.cpp  fs_utils.h  io_utils.cpp  io_utils.h  params.cpp  parse_utils.cpp  parse_utils.h  progress.cpp  version.h
src/decompress/: archive_record_reconstruction.cpp  archive_record_reconstruction.h  archive_stream_reader.cpp  archive_stream_reader.h  decompress_archive_io.cpp  decompress_archive_io.h
src/encode/: encoder.cpp  encoder.h  template_dispatch.cpp  template_dispatch.h
src/preprocess/: input_preparation.cpp  input_preparation.h  preprocess_artifacts.cpp  preprocess_artifacts.h
src/reorder/: paired_end_mate_ordering.cpp  paired_end_mate_ordering.h  quality_id_reordering.cpp  quality_id_reordering.h  read_reordering.h  read_reordering_impl.h  stream_reordering.cpp  stream_reordering.h
src/workflow/: archive_preview.cpp  compression_workflow.cpp  decompression_workflow.cpp  spring_audit.cpp  workflow_api.h  workflow_internal.h  workflow_shared.cpp
tests/: big_bench.ps1  big_bench.sh  big_thread_test.ps1  comparison_bench.ps1  comparison_bench.sh  doctest.h  integration_tests.cpp  integrity_test.cpp  reader_test.cpp  small_bench.ps1  small_bench.sh  smoke_test.ps1  smoke_test.sh  test_script.ps1  test_script.sh  tsan.supp  unit_tests.cpp
tests/bench/: big_bench.ps1  big_bench.sh  big_thread_test.ps1  comparison_bench.sh  small_bench.ps1  small_bench.sh
tests/integration/: archive_integration_tests.cpp  assay_integration_tests.cpp  grouped_archive_integration_tests.cpp  integration_test_support.cpp  integration_test_support.h  reader_integration_tests.cpp  workflow_metadata_integration_tests.cpp
tests/smoke/: basic_roundtrip_smoke_tests.cpp  cli_mode_smoke_tests.cpp  grouped_roundtrip_smoke_tests.cpp  gzip_roundtrip_smoke_tests.cpp  smoke_test_support.cpp  smoke_test_support.h  smoke_tests.cpp
tests/support/: doctest.h
tests/unit/: assay_detector_real_data_unit_tests.cpp  assay_detector_unit_tests.cpp  dna_parse_unit_tests.cpp  unit_tests.cpp
tools/host/nasm/: LICENSE
tools/host/nasm/linux/: nasm
tools/host/nasm/macosx/: nasm
tools/host/ninja/linux-aarch64/: ninja
tools/host/ninja/mac/: ninja
util/: RLE.cpp  boost_openmp_bcm_test.cpp  boost_openmp_bsc_test.cpp  compute_entropy.py  io_experiments.cpp  quality_counts.cpp  quality_illumina_bin.cpp  quality_pack.cpp  quality_transpose.cpp  quality_unpack.cpp  readlendistr.cpp  splitlongreads.cpp
